Small style changes and make sure it`s usable on mobile.

--- a/src/components/Sequence.css
+++ b/src/components/Sequence.css
@@ -1,15 +1,17 @@
 .sequence {
     color: #DEDEDE;
-    border: 1px solid grey;
+    border: 2px solid #262626;
     background-color: #232323;
+    margin: 4px;
     padding: 4px;
     text-align: right;
+    overflow-x: auto;
 }
 
 .sequence-name {
     display: flex;
     flex-direction: column;
-    padding: 4px 0;
+    padding: 6px 0;
 }
 
 .sequence-type {
